--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,23 @@
+#
+# This file is part of Sample Database Utils.
+# Copyright (C) 2020-2021 INPE.
+#
+# Sample Database Utils is free software; you can redistribute it and/or modify it
+# under the terms of the MIT License; see LICENSE file for more details.
+#
+
 include *.md
 include LICENSE
-recursive-include sample_db_utils *.R
+include *.rst
+include *.sh
+include pytest.ini
+recursive-include sample_db_utils *.R	recursive-include sample_db_utils *.R
+recursive-include docs *.bat
+recursive-include docs *.css
+recursive-include docs *.py
+recursive-include docs *.rst
+recursive-include docs Makefile
+recursive-include tests *.py
+recursive-include docs *.ico
+recursive-include docs *.png
+
