--- a/.drone.yml
+++ b/.drone.yml
@@ -12,6 +12,9 @@ steps:
 - name: build
   image: python:3.7
   commands:
+  - pip install --upgrade pip
+  - pip install --upgrade setuptools
+  - pip install -e .[tests,docs]
   - ./run-tests.sh
 
 - name: coverage
