--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,11 +6,13 @@
 # under the terms of the MIT License; see LICENSE file for more details.
 #
 
+exclude docs/sphinx/_build
 include *.md
 include LICENSE
 include *.rst
 include *.sh
 include pytest.ini
+recursive-exclude docs/sphinx/_build *
 recursive-include sample_db_utils *.R	recursive-include sample_db_utils *.R
 recursive-include docs *.bat
 recursive-include docs *.css
