--- a/.drone.yml
+++ b/.drone.yml
@@ -32,3 +32,13 @@ steps:
   when:
     event:
     - push
+
+- name: discord-notify
+  image: brazildatacube/bdc-drone-discord
+  settings:
+    webhook:
+      from_secret: discord_webhook
+  when:
+    status:
+      - failure
+      - success
