--- a/.drone.yml
+++ b/.drone.yml
@@ -8,6 +8,10 @@
 kind: pipeline
 name: sample-db-utils
 
+platform:
+  os: linux
+  arch: amd64
+
 steps:
 - name: build
   image: python:3.7
@@ -40,5 +44,5 @@ steps:
       from_secret: discord_webhook
   when:
     status:
-      - failure
-      - success
+    - failure
+    - success
